Change default language to GHC2021 & use Text

--- a/lang/package.yaml
+++ b/lang/package.yaml
@@ -21,6 +21,12 @@ description: Please see the README on GitHub at <https://github.com/Lamagraph/in
 
 dependencies:
   - base >= 4.7 && < 5
+  - text
+
+language: GHC2021
+
+default-extensions:
+  - OverloadedStrings
 
 ghc-options:
   - -Wall
