--- a/lang/package.yaml
+++ b/lang/package.yaml
@@ -22,6 +22,8 @@ description: Please see the README on GitHub at <https://github.com/Lamagraph/in
 dependencies:
   - base >= 4.7 && < 5
   - text
+  - wl-pprint-text
+  - containers
 
 language: GHC2021
 
