--- a/lang/package.yaml
+++ b/lang/package.yaml
@@ -24,11 +24,13 @@ dependencies:
   - text
   - wl-pprint-text
   - containers
+  - mtl
 
 language: GHC2021
 
 default-extensions:
   - OverloadedStrings
+  - LambdaCase
 
 ghc-options:
   - -Wall
@@ -40,6 +42,7 @@ ghc-options:
   - -Wmissing-home-modules
   - -Wpartial-fields
   - -Wredundant-constraints
+  - -Wno-unrecognised-pragmas # Used for HLINT pragmas
 
 library:
   source-dirs: src
